--- a/public/css/tablas.css
+++ b/public/css/tablas.css
@@ -53,6 +53,15 @@ body{
   color: white;
 }
 
+#adm-img{
+  border-radius: 50%;
+}
+
+.adm-ini{
+  margin-top: 100%;
+  padding: 1rem;
+}
+
 .lateral a:hover{
   background-color: gold;
   border-radius: 1rem;
@@ -102,7 +111,7 @@ body{
 }
 
 #imagen{
-  width: 60px;
+  border-radius: 20%;
 }
 
 #btnPlatos{
@@ -188,13 +197,10 @@ body{
 .form-select{
   width: 55%;
 }
-#ver{
-  color: lime;
-  font-size: 1.3rem;
-}
+
 
 #lapiz{
-  color: gold;
+  color: lime;
   font-size: 1.3rem;
   
 }
@@ -203,6 +209,6 @@ body{
   font-size: 1.3rem;
 }
 #btnAccion:hover{
-  background-color: rgb(243, 242, 242);
+  background-color: rgba(255, 217, 0, 0.346);
 }
 
