--- a/public/css/categorías.css
+++ b/public/css/categorías.css
@@ -32,7 +32,7 @@ body{
   justify-content: space-evenly;
 }
 .card{
-  background-color: white;
+  background-color: gold;
   
   padding-bottom: 0.5rem;
   margin: 0.5rem;
