--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -10,9 +10,9 @@
   align-items: center;
   height: 100%; 
   background: linear-gradient(
-    to bottom,
-    rgba(0,0,0,0),
-    rgba(0,0,0,1)
+    rgba(0, 0, 255, 0.54),
+    white,
+    rgba(0, 0, 255, 0.54)
   );
 }
 
@@ -23,12 +23,13 @@
 
 #reg{
   
-  background-color: rgba(236, 236, 25, 0.873);
+  background-color: white;
   border-radius: 0.7rem;
+  border-top: solid 2px gainsboro;
   width: 30rem;
   height: auto;
   padding: 2%;
-  margin: 1rem  auto 15rem auto;
+  margin: 2% 5%;
 }
 
 #direccion{
